# physiotrack

./: .gitignore  README.md  logs.txt  setup.cfg  webapp.py
physiotrack/: PhysioTrack.py  __init__.py  process.py  process_webpage.py
physiotrack-api/: Dockerfile  app.py  main-app.py  main-demo.py  main-page.py  requirements.txt  webapp.py
physiotrack-api/app/: main.py
physiotrack-api/app/models/: request.py  response.py
physiotrack-api/app/routers/: assessment.py
physiotrack-api/app/services/: analysis_service.py  pose_service.py
physiotrack-api/static/: upload_video.html
physiotrack-api/templates/: index.html  results.html  results.html   upload.html
physiotrack/Demo/: Config_demo.toml  demo_rom_analysis.py  input.json  logs.txt  streamlitdemo.py  streamlitdemo1.py  test.py  test4.py  test_rom_analysis.py  test_rom_analysis_slumpTest.py  test_rom_analysis_spine-1.py  test_rom_analysis_spine-2.py  test_rom_analysis_spine-flexion-extension.py  test_rom_analysis_spine-flexion.py  test_spine-flexion-extension.py  test_spine-flexion.py  test_webcam.py
physiotrack/Demo/results/: logs.txt
physiotrack/Utilities/: common.py  filter.py  skeletons.py
tests/: test_angle_calculation.py  test_pose_estimation.py
