[metadata]
name = physiotrack
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Detect pose and analyze range of motion for physiotherapy assessment.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/yourusername/physiotrack
keywords = physiotherapy, rehabilitation, kinematics, joint angles, pose estimation, ROM, range of motion, healthcare
license = BSD 3-Clause License
license_files = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Multimedia :: Graphics
project_urls = 
    Bug Tracker = https://github.com/yourusername/physiotrack/issues
    
[options]
zip_safe = False
python_requires <= 3.12
install_requires =
    ipython
    toml
    numpy
    pandas>=1.5
    scipy
    anytree
    opencv-python
    matplotlib
    PyQt5
    statsmodels
    c3d
    rtmlib
    openvino
    tqdm
    imageio_ffmpeg
    deep-sort-realtime
packages = find:

[options.entry_points]
console_scripts = physiotrack = physiotrack.PhysioTrack:main

[options.package_data]
* = Demo/**/*, Demo/**/**/*